# claude-agent

./: .env.example  .gitignore  CLAUDE-ANALYZE.md  CLAUDE-ASK.md  CLAUDE-REVIEW.md  CLAUDE-WRITE.md  CLAUDE.md  Dockerfile  Makefile  README.md  TROUBLESHOOTING.md  agent-entrypoint.sh  claude-agent  claude-pr  docker-compose.local.yml  docker-compose.yml  init-aws.sh  init-firewall.sh  package-lock.json  package.json  pyproject.toml
.devcontainer/: devcontainer.json
agent/: .env.example  .gitignore  CLAUDE_CODE_WRAPPER_IMPLEMENTATION.md  Dockerfile  docker-compose.yml  init-aws.sh  pytest.ini  requirements.txt  test_wrapper.py
agent/agent/: claude_code.py  config.py  event_parser.py  health.py  main.py  session.py  sqs_handler.py  worker.py
agent/tests/: test_claude_code.py  test_config.py  test_event_parser.py  test_health.py  test_session.py  test_sqs_handler.py  test_worker.py
agent/wrapper/: README.md  claude_code.py  event_parser.py  main.py  session.py  sqs_handler.py
backend/: .env.example  Dockerfile  README.md  alembic.ini  env.json  pyproject.toml  template.yaml  test_api.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/app/: CLAUDE.md  main.py
backend/app/api/: auth.py  git_providers.py  projects.py  providers.py  tasks.py  websocket.py
backend/app/core/: config.py  database.py
backend/app/models/: __init__.py  project.py  task.py  user.py
backend/app/providers/: __init__.py  base.py  factory.py  github.py
backend/tests/: CLAUDE.md  conftest.py  test_git_providers.py  test_health.py  test_integration.py  test_minimal_api.py
docs/: DEVELOPMENT_SETUP.md  TESTING.md  development.md  fargate-max-subscription-plan.md  github-authentication.md
docs/adr/: 0000-use-architecture-decision-records.md  0001-use-monorepo-structure.md  0002-technology-stack-selection.md  0003-aws-services-architecture.md  0004-package-management-strategy.md  0005-provider-abstraction-pattern.md  0006-deployment-strategy.md  0007-agent-wrapper-approach.md  0008-authentication-and-authorization.md  0009-event-driven-architecture.md  README.md  template.md
frontend/: .env.example  CLAUDE.md  Dockerfile.dev  README.md  jest.config.js  next.config.js  package.json  tsconfig.json
frontend/src/components/: ErrorBoundary.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: _app.tsx  index.tsx
frontend/src/pages/__tests__/: index.test.tsx
frontend/src/styles/: globals.css
frontend/src/types/: api.ts  index.ts
frontend/tests/: CLAUDE.md
scripts/: demo.sh  dev.sh  start-poc.sh  stop-dev.sh  test-integration.sh  test-services.sh
shared/: package.json  tsconfig.json
shared/src/schemas/: index.ts  validation.ts
shared/src/types/: index.ts  project.ts  provider.ts  task.ts  user.ts
tests/integration/: test_poc_integration.py
